--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   "dependencies": {
     "next": "12.1.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "@nextui-org/react": "^1.0.2-beta.3",
+    "firebase": "^9.6.7",
+    "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1",
+    "next-auth": "^4.2.1",
+    "next-connect": "^0.12.1",
+    "next-themes": "^0.0.15",
+    "node-mailjet": "^3.3.7",
+    "react-hook-form": "^7.27.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "8.12.0",
