--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://starla:Apples01@lerbios-cloud.p7auz.gcp.mongodb.net/registros-2?retryWrites=true&w=majority
 MONGODB_DB="anet-db"
-NEXT_PUBLIC_HOST=http://localhost:3000/
+NEXT_PUBLIC_HOST=https://quiet-retreat-44809.herokuapp.com
