--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
     "@nextui-org/react": "^1.0.2-beta.3",
+    "date-fns": "^2.28.0",
     "firebase": "^9.6.7",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
+    "next": "12.1.2",
     "next-auth": "^4.2.1",
     "next-connect": "^0.12.1",
     "next-themes": "^0.0.15",
     "node-mailjet": "^3.3.7",
+    "react": "^18.1.0",
+    "react-date-range": "^1.4.0",
+    "react-dom": "18.0.0",
     "react-hook-form": "^7.27.0",
     "react-icons": "^4.3.1"
   },
