--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "eslint": "8.12.0",
+    "eslint": "^8.12.0",
     "eslint-config-next": "12.1.2"
   }
 }
